--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,3 @@
-name = "zaya-app-ads-worker"
-type = "javascript"
-
-[build]
-command = ""
-upload.format = "service-worker"
+name = "app-ads-worker"
 main = "index.js"
+compatibility_date = "2024-02-14"
